<resources>
    <string name="app_name">Lesson 5.13</string>
    <string name="title_activity">Nations And Population</string>
    <string name="text_china">China</string>
    <string name="text_beijing">Beijing</string>
    <string name="text_country_flag">Country\'s flag</string>
    <string name="text_nation">Nation: %s</string>
    <string name="text_capital">Capital: %s</string>
    <string name="text_population">Population: %5.1f</string>
    <string name="text_area">Area: %d</string>
    <string name="text_density">Density: %d</string>
    <string name="text_world_share">World Share: %s</string>
    <string name="text_km2">Km\u00B2</string>
    <string name="text_million">million people</string>
    <string name="text_ppa">people/Km\u00B2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Image back</string>
    <string name="desc_image_flag">Image flag</string>
</resources>